name:                pinboard
version:             0.0.0.1
synopsis:            Pinboard API for Haskell
license:             MIT
license-file:        LICENSE
author:              Jon Schoning
maintainer:          jonschoning@gmail.com
copyright:           Copyright (c) 2015 Jon Schoning
homepage:            https://github.com/jonschoning/pinboard
bug-reports:         https://github.com/jonschoning/pinboard/issues
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:    
library 
  hs-source-dirs:      src
  build-depends:       HsOpenSSL
                     , aeson
                     , base >=4.6 && <4.8
                     , bytestring
                     , either
                     , http-streams
                     , io-streams
                     , mtl >= 2.1.3.1
                     , random >= 1.1
                     , text
                     , time
                     , transformers
                     , unordered-containers
              
  default-language:    Haskell2010
  other-modules:       
  exposed-modules:     
                       Web.Pinboard
                       Web.Pinboard.Api
                       Web.Pinboard.ApiTypes 
                       Web.Pinboard.Client
                       Web.Pinboard.Client.Internal
                       Web.Pinboard.Client.Error
                       Web.Pinboard.Client.Types
                       Web.Pinboard.Client.Util
  ghc-options:         -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/jonschoning/pinboard.git
