name:                pinboard
version:             0.1
synopsis:            Access to the Pinboard API
license:             MIT
license-file:        LICENSE
author:              Jon Schoning
maintainer:          jonschoning@gmail.com
copyright:           Copyright (c) 2015 Jon Schoning
homepage:            https://github.com/jonschoning/pinboard
bug-reports:         https://github.com/jonschoning/pinboard/issues
category:            Network APIs
build-type:          Simple
cabal-version:       >=1.10
Description:    
library 
  hs-source-dirs:      src
  build-depends:       HsOpenSSL
                     , aeson
                     , base >=4.6
                     , bytestring
                     , either
                     , http-streams
                     , http-types
                     , io-streams
                     , mtl >= 2.1.3.1
                     , random >= 1.1
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , containers
                     , old-locale
              
  default-language:    Haskell2010
  other-modules:       
  exposed-modules:     
                       Pinboard
                       Pinboard.Api
                       Pinboard.ApiTypes 
                       Pinboard.Client
                       Pinboard.Client.Internal
                       Pinboard.Client.Error
                       Pinboard.Client.Types
                       Pinboard.Client.Util
  ghc-options:         -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/jonschoning/pinboard.git
