name:                sample
version:             0.1.0.0
license-file:        LICENSE
author:              Jon Schoning
maintainer:          jonschoning@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable sample
  main-is:             sample.hs
  -- other-modules:       
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && < 5.0 
                     , pinboard
  hs-source-dirs:    .
  ghc-options:       -Wall
  default-language:  Haskell2010

executable sampleLens
  main-is:             sampleLens.hs
  -- other-modules:       
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && < 5.0 
                     , lens >= 4.13
                     , pinboard
  hs-source-dirs:    .
  ghc-options:       -Wall
  default-language:  Haskell2010
